@@ -1,8 +1,14 @@
 FROM bellsoft/liberica-openjdk-debian:8 as builder
 WORKDIR application
+RUN apt-get update -qq && \
+    apt-get install unzip --no-install-recommends -y -qq
 COPY ./target/*.jar application.jar
-RUN java -Djarmode=layertools -jar application.jar extract && rm application.jar
-
+COPY ./docker/class_counter.sh ./
+RUN java -Djarmode=layertools -jar application.jar extract && \
+    rm application.jar && \
+    bash class_counter.sh application dependencies > class_count && \
+    rm -rf /var/lib/apt/lists/* && \
+    apt-get clean
 FROM bellsoft/liberica-openjre-debian:8
 ARG USERNAME=spring
 ARG GROUPNAME=spring
@@ -11,20 +17,14 @@ ARG GID=1000
 WORKDIR application
 RUN groupadd -g $GID $GROUPNAME && \
     useradd -m -s /bin/bash -u $UID -g $GID $USERNAME
-RUN ARCH=$(uname -m) && \
-    if [ "$ARCH" = "aarch64" ]; then \
-        curl -L -o jattach.tgz https://github.com/jattach/jattach/releases/download/v2.2/jattach-linux-arm64.tgz; \
-    elif [ "$ARCH" = "x86_64" ]; then \
-        curl -L -o jattach.tgz https://github.com/jattach/jattach/releases/download/v2.2/jattach-linux-x64.tgz; \
-    else \
-        echo "Unsupported architecture: $ARCH" && exit 1; \
-    fi && \
-    tar -xzf jattach.tgz -C /usr/local/bin && \
-    rm jattach.tgz
+RUN curl -sL -o memory-calculator.tgz https://java-buildpack.cloudfoundry.org/memory-calculator/trusty/x86_64/memory-calculator-3.13.0_RELEASE.tar.gz && \
+    tar -xzf memory-calculator.tgz -C /usr/local/bin && \
+    rm -f memory-calculator.tgz
 USER $USERNAME
 COPY --from=builder application/dependencies/ ./
 COPY --from=builder application/spring-boot-loader/ ./
 COPY --from=builder application/snapshot-dependencies/ ./
 COPY --from=builder application/application/ ./
-ENV JAVA_TOOL_OPTIONS -Dfile.encoding=UTF-8 -Duser.country=JP -Duser.language=ja -Duser.timezone=Asia/Tokyo -XX:+ExitOnOutOfMemoryError -XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0 -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:InitialRAMPercentage=50.0
-ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
+COPY --from=builder application/class_count /opt/
+COPY ./docker/entrypoint.sh ./
+ENTRYPOINT ["bash", "/application/entrypoint.sh"]
